[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "cordless"
version = "1.4.5"
description = "Serverless Discord interactions framework for AWS Lambda"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["discord", "bot", "lambda", "serverless", "aws", "interactions"]
dependencies = [
  "boto3>=1.20",
  "botocore[crt]",
  "uv>=0.11",
]

authors = [
  { name = "borhara" }
]

classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]


[project.urls]
Homepage = "https://cordless.dev"
Documentation = "https://www.cordless.dev/guides/introduction/"
Repository = "https://github.com/borhara/cordless"


[project.scripts]
cordless = "cordless.cli:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "boto3>=1.20",
    "botocore[crt]",
    "moto[iam,awslambda-simple,apigatewayv2,events,logs,s3]>=5.0",
    "pynacl>=1.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.ruff.lint.per-file-ignores]
# these carry markdown reference tables in docstrings (rendered into
# cordless.dev's api reference) - a table row can't wrap without breaking
# as markdown, so line-length doesn't apply the same way it does to code
"src/cordless/app.py" = ["E501"]
"src/cordless/context.py" = ["E501"]